SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Name</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipName>Course_Session_Schedulings</relationshipName>
    <type>Lookup</type>
</CustomField>