SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Facility_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Facility_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Sessions (Facility Coordinator)</relationshipLabel>
    <relationshipName>Course_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>