SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Number_of_Scheduled_Participants_NEW__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scheduled_Participants_NEW__c</fullName>
    <formula>No_of_Scheduled_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Scheduled Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>