SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Preparation_Day__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Day__c</fullName>
    <label>Preparation Day</label>
    <type>Date</type>
</CustomField>