SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Sessions (Program Coordinator)</relationshipLabel>
    <relationshipName>Course_Sessions2</relationshipName>
    <type>Lookup</type>
</CustomField>