SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>