SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Date_Time__c</fullName>
    <formula>LEFT(TEXT(Session_Time__c),5) &amp; &quot; &quot; &amp;
IF(
  VALUE( Left( TEXT( Session_Time__c ), 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Date/Time</label>
    <type>Text</type>
</CustomField>