SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <inlineHelpText>This is a Text field.  You can add values such as &quot;1 Hour&quot;, &quot;30 Minutes&quot;, &quot;60, 1.5, etc...&quot;</inlineHelpText>
    <label>Session Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>