SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Session_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Facilitator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Session_Schedulings</relationshipName>
    <type>Lookup</type>
</CustomField>