SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <label>Session Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>