SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Time__c</fullName>
    <label>Session Start Time</label>
    <type>Time</type>
</CustomField>