SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/fields/Session_Time_NEW__c.field-meta.xml
<CustomField>
    <fullName>Session_Time_NEW__c</fullName>
    <formula>If(
VALUE( MID( TEXT( Session_Time__c ), 1, 2) ) &gt; 12,
TEXT(VALUE( MID( TEXT( Session_Time__c ), 1, 2) )-12)+&quot;&quot;+MID( TEXT( Session_Time__c ), 3, 3)+&quot; PM&quot;,
TEXT(VALUE( MID( TEXT( Session_Time__c ), 1, 2) ) )+&quot;&quot;+MID( TEXT( Session_Time__c ), 3, 3)+&quot; AM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Start Time</label>
    <type>Text</type>
</CustomField>