SubBt/force-app/main/default/objects/Course_Session_Scheduling__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Session_Time_NEW__c</columns>
    <columns>Session_Duration__c</columns>
    <columns>Session_Facilitator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>